# moonbandits

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: app.c  app.h  main.c
vcpkg-web/: vcpkg.json
